# code-plus-plus

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  CUsersMaxAppDataLocalTempstyle_configurator_diff.txt  DESIGN.md  DEVELOPMENT.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  deny.toml
.claude/agents/: security-auditor.md
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml
assets/preinstalled-udls/: PROVENANCE.md
crates/app/: Cargo.toml  app.manifest  build.rs
crates/app/src/: args.rs  logging.rs  main.rs
crates/build-helpers/: Cargo.toml
crates/build-helpers/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: encoding.rs  eol.rs  fif.rs  file.rs  find_history.rs  lang.rs  lib.rs  npp_session.rs  perf.rs  preferences.rs  recent_files.rs  session.rs  styles.rs
crates/editor/: Cargo.toml
crates/editor/src/: lib.rs  theme.rs  udl_paint.rs
crates/platform/: Cargo.toml
crates/platform/src/: config.rs  dynlib.rs  host_env.rs  lib.rs  plugin_stage.rs  watch.rs
crates/plugin-host/: Cargo.toml
crates/plugin-host/src/: codepp_ext.rs  dispatch.rs  ffi.rs  host.rs  lib.rs
crates/plugin-host/tests/: cppconverter.rs  cppexport.rs  cppexport_e2e.rs  cppmimetools.rs  example_hello.rs  example_hello_e2e.rs
crates/plugin-sdk/: Cargo.toml
crates/plugin-sdk/src/: lib.rs
crates/scintilla-sys/: Cargo.toml  build.rs
crates/scintilla-sys/cxx/: LexillaShim.cxx
crates/scintilla-sys/src/: lib.rs
crates/shell/: Cargo.toml
crates/shell/src/: fif.rs  lib.rs
crates/udl/: Cargo.toml
crates/udl/src/: lib.rs  registry.rs  rules.rs  serialise.rs  tokenise.rs
crates/ui_gtk/: Cargo.toml
crates/ui_gtk/src/: docmap.rs  fif.rs  lib.rs  menu.rs  platform.rs  plugin.rs  preferences.rs  search.rs  state.rs  status.rs  style_config.rs  tabs.rs  toolbar.rs  udl.rs  workspace.rs
crates/ui_win32/: Cargo.toml
crates/ui_win32/src/: lib.rs  preferences.rs  print.rs  print_preview.rs  toolbar.rs  udl_editor.rs  udl_paint.rs
docs/: DESIGN.md  DEVELOPMENT.md  lexers-coverage.md  nppm-coverage.md
plugins/cppconverter/: Cargo.toml  build.rs
plugins/cppconverter/src/: imp.rs  lib.rs
plugins/cppexport/: Cargo.toml  build.rs
plugins/cppexport/src/: imp.rs  lib.rs
plugins/cppmimetools/: Cargo.toml  build.rs
plugins/cppmimetools/src/: imp.rs  lib.rs
plugins/example-hello/: Cargo.toml  build.rs
plugins/example-hello/src/: imp.rs  lib.rs
plugins/nppcompat-headers/: Docking.h  HEADER_TEMPLATE.txt  Notepad_plus_msgs.h  PluginInterface.h  README.md  menuCmdID.h
tools/: cpp-test-case.py  dir-structure-test-case.py  rs-test-case.py
tools/codepp-app-icon/: generate.py
tools/codepp-icons/: README.md  generate.py  preview.html
