# Code++ workspace.
#
# Crate names are prefixed `codepp-` to avoid colliding with std (`core`)
# and to make external references unambiguous. Directory names follow
# DESIGN.md §3 (`crates/core`, `crates/editor`, ...).

[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Max Fiedler and Code++ contributors"]
repository = "https://git.fiedler.live/tux/code-plus-plus"
rust-version = "1.95"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

# Internal crates declared centrally so cargo-deny's wildcard check is
# satisfied (path-only deps without an explicit `version` are treated as
# `*` by the bans check). Each per-crate manifest pulls these via
# `dep = { workspace = true }`. When bumping the workspace package
# version, update both `[workspace.package].version` and the version
# field of each entry below.
[workspace.dependencies]
codepp-core          = { version = "0.1.0", path = "crates/core" }
codepp-editor        = { version = "0.1.0", path = "crates/editor" }
codepp-platform      = { version = "0.1.0", path = "crates/platform" }
codepp-plugin-host   = { version = "0.1.0", path = "crates/plugin-host" }
codepp-scintilla-sys = { version = "0.1.0", path = "crates/scintilla-sys" }
codepp-shell         = { version = "0.1.0", path = "crates/shell" }
codepp-ui-win32      = { version = "0.1.0", path = "crates/ui_win32" }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
# Faster incremental builds during development; release profile carries the perf budget.
opt-level = 0
debug = "line-tables-only"
