# Code++ workspace.
#
# Crate names are prefixed `codepp-` to avoid colliding with std (`core`)
# and to make external references unambiguous. Directory names follow
# docs/DESIGN.md §3 (`crates/core`, `crates/editor`, ...).

[workspace]
resolver = "2"
members = [
    "crates/*",
    "plugins/example-hello",
    "plugins/cppmimetools",
    "plugins/cppconverter",
    "plugins/cppexport",
]
default-members = ["crates/app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Max Fiedler and Code++ contributors"]
repository = "https://git.fiedler.live/tux/code-plus-plus"
rust-version = "1.95"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

# Internal crates declared centrally so cargo-deny's wildcard check is
# satisfied (path-only deps without an explicit `version` are treated as
# `*` by the bans check). Each per-crate manifest pulls these via
# `dep = { workspace = true }`. When bumping the workspace package
# version, update both `[workspace.package].version` and the version
# field of each entry below.
[workspace.dependencies]
codepp-build-helpers = { version = "0.1.0", path = "crates/build-helpers" }
codepp-core = { version = "0.1.0", path = "crates/core" }
codepp-editor = { version = "0.1.0", path = "crates/editor" }
codepp-platform = { version = "0.1.0", path = "crates/platform" }
codepp-plugin-host = { version = "0.1.0", path = "crates/plugin-host" }
codepp-plugin-sdk = { version = "0.1.0", path = "crates/plugin-sdk" }
codepp-scintilla-sys = { version = "0.1.0", path = "crates/scintilla-sys" }
codepp-shell = { version = "0.1.0", path = "crates/shell" }
codepp-udl = { version = "0.1.0", path = "crates/udl" }
codepp-ui-gtk = { version = "0.1.0", path = "crates/ui_gtk" }
codepp-ui-win32 = { version = "0.1.0", path = "crates/ui_win32" }

# External dependencies — pin every version here so cargo-deny's wildcard
# check stays satisfied workspace-wide.
crossbeam-channel = "0.5"
encoding_rs = "0.8"
globset = "0.4"
# GTK 3 bindings for `ui_gtk`. GTK 3 — not 4 — because Scintilla has no
# GTK 4 backend (see `crates/scintilla-sys/build.rs::build_scintilla_gtk`
# and DESIGN.md §4.1). The gtk3-rs crates are archived upstream, which
# is why `deny.toml` carries documented advisory ignores for them; GTK
# 3.24 is itself API-frozen, so there is nothing left for the bindings
# to track. MIT.
gtk = "0.18"
# Only for `O_NOFOLLOW` / `O_NONBLOCK` in the find-in-files worker's
# open path, and `mkfifo` in its tests; not a general-purpose escape
# hatch. MIT OR Apache-2.0.
libc = "0.2"
notify = "8"
# PNG decoder — only PNG, no other formats. Used by `ui_win32` to
# turn the toolbar's compile-time-embedded PNG bytes into Win32
# DIB sections for `HIMAGELIST`. MIT OR Apache-2.0.
png = "0.18"
# Build-script helper: resolves GTK 3's cflags and link flags for the
# Scintilla GTK backend on Linux. MIT OR Apache-2.0.
pkg-config = "0.3"
quick-xml = { version = "0.41", features = ["serialize"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
tracing = "0.1"
# Log/diagnostic sink for the 232 `tracing::` call sites, which were
# no-ops until this landed — `tracing` alone records nothing without a
# subscriber. Off unless `--verbose` / `--perf` / `CODEPP_LOG` asks for
# it, per DESIGN.md §5.5. `env-filter` provides `CODEPP_LOG`'s syntax;
# default features are off to keep the tree small. MIT.
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "env-filter",
    "ansi",
] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
# Faster incremental builds during development; release profile carries the perf budget.
opt-level = 0
debug = "line-tables-only"
