[package]
name = "codepp-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Glue layer: owns Session, EditorHandles, plugin host. Defines the UiPlatform trait."

[lints]
workspace = true

[lib]
name = "codepp_shell"

[dependencies]
codepp-core        = { workspace = true }
codepp-editor      = { workspace = true }
codepp-plugin-host = { workspace = true }
codepp-platform    = { workspace = true }
crossbeam-channel  = { workspace = true }
# tempfile is a runtime dep (used by save_current_to_disk's atomic
# write), not just a test fixture.
tempfile = { workspace = true }
tracing  = { workspace = true }
