[package]
name = "codepp-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Glue layer: owns Session, EditorHandles, plugin host. Defines the UiPlatform trait."

[lints]
workspace = true

[lib]
name = "codepp_shell"

[dependencies]
codepp-core        = { workspace = true }
codepp-editor      = { workspace = true }
codepp-plugin-host = { workspace = true }
codepp-platform    = { workspace = true }
codepp-udl         = { workspace = true }
crossbeam-channel  = { workspace = true }
# tempfile is a runtime dep (used by save_current_to_disk's atomic
# write), not just a test fixture.
tempfile = { workspace = true }
tracing  = { workspace = true }

# `O_NOFOLLOW` + `O_NONBLOCK` for the find-in-files worker's open, so a
# path swapped for a symlink or a FIFO between the walker's check and
# the worker's open is refused by the kernel rather than followed or
# blocked on. Unix arm only; the Windows equivalent uses
# `FILE_FLAG_OPEN_REPARSE_POINT` (bare hex `u32`, no Win32 crate
# needed) and lives at the same call site in `fif.rs::read_capped`.
[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

