[package]
name = "codepp-ui-win32"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Win32 UI backend: window, menus, tabs, dialogs."

[lints]
workspace = true

[lib]
name = "codepp_ui_win32"

[target.'cfg(target_os = "windows")'.dependencies]
codepp-core          = { workspace = true }
codepp-shell         = { workspace = true }
codepp-editor        = { workspace = true }
codepp-plugin-host   = { workspace = true }
codepp-platform      = { workspace = true }
codepp-scintilla-sys = { workspace = true }
tracing              = { workspace = true }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
] }
