[package]
name = "codepp-cppconverter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Code++ preinstalled plugin: ASCII↔HEX selection conversion. Clean-room MIT reimplementation of Notepad++'s NppConverter."

[lints]
workspace = true

[lib]
# `cdylib` produces `cppconverter.dll` on Windows; the host loads it
# via `LoadLibraryW`. Same cross-platform story as cppmimetools — the
# entry-point module is `#[cfg(target_os = "windows")]`-gated until
# Phase 5 ports the host to `dlopen`/`dlsym`.
crate-type = ["cdylib"]
name = "cppconverter"

# Cross-platform: the plugin builds on Windows (LoadLibraryW) and Linux
# (dlopen). macOS stays stubbed until Scintilla has a Cocoa backend.
[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
codepp-plugin-sdk = { workspace = true }

[build-dependencies]
# Embeds `VS_VERSION_INFO` into the cdylib so the Plugin Manager
# dialog reads the version straight from this manifest.
codepp-build-helpers = { workspace = true }
