[package]
name = "codepp-cppmimetools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Code++ preinstalled plugin: encode/decode selections (Base64, URL, quoted-printable). Clean-room MIT reimplementation of Notepad++'s mimeTools."

[lints]
workspace = true

[lib]
# `cdylib` produces `cppmimetools.dll` on Windows; the host loads it via
# `LoadLibraryW`. The same source compiles to `.so`/`.dylib` once Phase 5
# ports the host to `dlopen`/`dlsym`. On non-Windows hosts today the
# entry-point module is gated behind `#[cfg(target_os = "windows")]`,
# so the build still emits an empty cdylib stub for the workspace's
# cross-platform `cargo build` to pass.
crate-type = ["cdylib"]
name = "cppmimetools"

# Cross-platform: the plugin builds on Windows (LoadLibraryW) and Linux
# (dlopen). macOS stays stubbed until Scintilla has a Cocoa backend.
[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
codepp-plugin-sdk = { workspace = true }
# Raw-DEFLATE inflate for SAML Decode (SAML Redirect Binding payloads
# are URL-encoded + Base64-encoded + raw-DEFLATE compressed). Pure
# Rust, MIT/Apache/Zlib triple-licensed — all on the workspace's
# `deny.toml` allowlist. Already a transitive dep elsewhere in the
# workspace (via image / PNG decoders), so adding it as a direct dep
# here doesn't introduce new compile surface for the overall build.
miniz_oxide = { version = "0.8", default-features = false, features = [
    "with-alloc",
] }

[build-dependencies]
# Embeds `VS_VERSION_INFO` into the cdylib so the Plugin Manager
# dialog reads the version straight from this manifest.
codepp-build-helpers = { workspace = true }
